Consts added to the memory